--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8"/>
-    <title>Site Internet</title>
+    <title>Puissance 4</title>
     <link rel="stylesheet" href="styles/style.css"/>
   </head>
   <body>
